More whitespace fixes.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -12,6 +12,10 @@ a:active, a:focus, a:hover {
 	color: #2197db;
 }
 
+a span {
+	padding-left: 5px;
+}
+
 /*
  * See https://developer.mozilla.org/en/Images,_Tables,_and_Mysterious_Gaps
  *+ for why this is needed. (it doesn't apply to just tables)
@@ -148,13 +152,13 @@ p {
 
 #main {
 	padding-top: 0px;
-	padding-bottom: 40px;
+	padding-bottom: 100px;
 }
 
 #footer {
 	position: absolute;
 	bottom: 0;
-	height: 40px;
+	height: 100px;
 	width: 100%;
 	font-size: 0.8em;
 	border-top: 1px solid #ccc;
